--- a/tot-lib.csproj
+++ b/tot-lib.csproj
@@ -16,8 +16,8 @@
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
     </ItemGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <DebugType>none</DebugType>
-    </PropertyGroup>
+<!--    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">-->
+<!--        <DebugType>none</DebugType>-->
+<!--    </PropertyGroup>-->
 
 </Project>
